--- a/realphone.html
+++ b/realphone.html
@@ -8,6 +8,59 @@
     <link rel="stylesheet" href="realphone.css">
 </head>
 <body>
-    
+    <div class="main">
+        <nav class="nav">
+            <div class="logo">
+                <img src="images/logo.png" alt="REALPHONE">
+            </div>
+            <div class="links">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Phone</a></li>
+                    <li><a href="">Accessories</a> </li>
+                    <li><a href="">cart</a> </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="left">
+            <div class="magic"></div>
+            <img class="mobile" src="images/mobile.png" alt="">
+            <div class="container">
+                <div class="one">
+                    <img src="images/battery.png" alt="">
+                    <div class="info">
+                        <h3>Battery Life</h3>
+                        <p>5000mAh</p>
+                    </div>
+                </div>
+                <div class="two">
+                    <img src="images/processor.png" alt="">
+                    <div class="info">
+                        <h3>Procesor</h3>
+                        <p>5000mAh</p>
+                    </div>
+                </div>
+                <div class="three">
+                    <img src="images/display.png" alt="">
+                    <div class="info">
+                        <h3>Display</h3>
+                        <p>5000mAh</p>
+                    </div>
+                </div>
+                <div class="four">
+                    <img src="images/camera.png" alt="">
+                    <div class="info">
+                        <h3>Camera</h3>
+                        <p>5000mAh</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="arrows">
+            <img class="up" src="images/arrow.png" alt="">
+            <h3>features</h3>
+            <img class="down" src="images/arrow.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
